# msi-mpg341c

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
contrib/udev/: 71-msi-monitor.rules
docs/: protocol.md
src/msi_monitor/: __init__.py  cli.py  controller.py  ddc.py  errors.py  hid.py  hidmac.py  hidraw.py  profile.py  protocol.py
tests/: test_cli.py  test_controller.py  test_ddc.py  test_hidmac.py  test_hidraw.py  test_profile.py  test_protocol.py
